feat(gateway): implement list lessons by duration
