# api/internal/gateway/teacher/v1/handler/lesson.go
@@ -9,42 +9,58 @@ import (
 	"github.com/calmato/shs-web/api/internal/gateway/teacher/v1/request"
 	"github.com/calmato/shs-web/api/internal/gateway/teacher/v1/response"
 	"github.com/calmato/shs-web/api/internal/gateway/util"
+	"github.com/calmato/shs-web/api/pkg/jst"
 	"github.com/calmato/shs-web/api/proto/lesson"
 	"github.com/gin-gonic/gin"
+	"golang.org/x/sync/errgroup"
 )
 
 func (h *apiV1Handler) ListLessons(ctx *gin.Context) {
 	c := util.SetMetadata(ctx)
+	now := h.now()
+	var (
+		defaultSince = jst.FormatYYYYMMDD(jst.BeginningOfMonth(now.Year(), int(now.Month())))
+		defaultUntil = jst.FormatYYYYMMDD(jst.EndOfMonth(now.Year(), int(now.Month())))
+	)
 
-	summaryID, err := strconv.ParseInt(ctx.Param("shiftId"), 10, 64)
-	if err != nil {
-		badRequest(ctx, err)
-		return
+	in := &lesson.ListLessonsByDurationRequest{
+		TeacherId: getTeacherID(ctx),
+		Since:     ctx.DefaultQuery("since", defaultSince),
+		Until:     ctx.DefaultQuery("until", defaultUntil),
 	}
-	teacherID := ctx.Query("teacherId")
-	studentID := ctx.Query("studentId")
-
-	in := &lesson.ListLessonsRequest{
-		ShiftSummaryId: summaryID,
-		TeacherId:      teacherID,
-		StudentId:      studentID,
-	}
-	out, err := h.lesson.ListLessons(c, in)
+	out, err := h.lesson.ListLessonsByDuration(c, in)
 	if err != nil {
 		httpError(ctx, err)
 		return
 	}
 	glessons := gentity.NewLessons(out.Lessons)
-	gshifts := gentity.NewShifts(out.Shifts)
+	gShifts := gentity.NewShifts(out.Shifts)
 
-	lessons, err := entity.NewLessons(glessons, gshifts.Map())
+	eg, ectx := errgroup.WithContext(c)
+	var gteachers gentity.Teachers
+	eg.Go(func() (err error) {
+		gteachers, err = h.multiGetTeachers(ectx, glessons.TeacherIDs())
+		return
+	})
+	var gstudents gentity.Students
+	eg.Go(func() (err error) {
+		gstudents, err = h.multiGetStudents(ectx, glessons.StudentIDs())
+		return
+	})
+	if err := eg.Wait(); err != nil {
+		httpError(ctx, err)
+		return
+	}
+
+	lessons, err := entity.NewLessons(glessons, gShifts.Map())
 	if err != nil {
 		httpError(ctx, err)
 		return
 	}
 	res := &response.LessonsResponse{
-		Lessons: lessons,
-		Total:   out.Total,
+		Lessons:  lessons,
+		Teachers: entity.NewTeachers(gteachers, nil), // パフォーマンスを考慮して担当科目は取得しない
+		Students: entity.NewStudents(gstudents, nil), // パフォーマンスを考慮して受講科目は取得しない
 	}
 	ctx.JSON(http.StatusOK, res)
 }
