# docs/swagger/teacher/components/schemas/v1/lessons.response.yaml
@@ -98,10 +98,159 @@ lessonsResponse:
           updatedAt:
             type: string
             description: 更新日時
-    total:
-      type: integer
-      format: int64
-      description: 授業合計数
+    teachers:
+      type: array
+      description: 講師一覧
+      items:
+        type: object
+        properties:
+          id:
+            type: string
+            description: 講師ID
+          lastName:
+            type: string
+            description: 姓
+          firstName:
+            type: string
+            description: 名
+          lastNameKana:
+            type: string
+            description: 姓(かな)
+          firstNameKana:
+            type: string
+            description: 名(かな)
+          mail:
+            type: string
+            description: メールアドレス
+          role:
+            type: integer
+            format: int32
+            description: 権限 (0:不明, 1:講師, 2:管理者)
+          createdAt:
+            type: string
+            description: 登録日時
+          updatedAt:
+            type: string
+            description: 更新日時
+          subjects:
+            type: object
+            description: 担当教科一覧(Map)
+            properties:
+              1:
+                type: array
+                description: 担当教科一覧(小学校)
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: int64
+                      description: 授業科目ID
+                    name:
+                      type: string
+                      description: 授業科目名
+                    color:
+                      type: string
+                      description: 表示色
+                      format: '#rrggbb'
+                    schoolType:
+                      type: integer
+                      format: int32
+                      description: 校種
+                    createdAt:
+                      type: string
+                      description: 登録日時
+                    updatedAt:
+                      type: string
+                      description: 更新日時
+              2:
+                type: array
+                description: 担当教科一覧(中学校)
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: int64
+                      description: 授業科目ID
+                    name:
+                      type: string
+                      description: 授業科目名
+                    color:
+                      type: string
+                      description: 表示色
+                      format: '#rrggbb'
+                    schoolType:
+                      type: integer
+                      format: int32
+                      description: 校種
+                    createdAt:
+                      type: string
+                      description: 登録日時
+                    updatedAt:
+                      type: string
+                      description: 更新日時
+              3:
+                type: array
+                description: 担当教科一覧(高等学校)
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: int64
+                      description: 授業科目ID
+                    name:
+                      type: string
+                      description: 授業科目名
+                    color:
+                      type: string
+                      description: 表示色
+                      format: '#rrggbb'
+                    schoolType:
+                      type: integer
+                      format: int32
+                      description: 校種
+                    createdAt:
+                      type: string
+                      description: 登録日時
+                    updatedAt:
+                      type: string
+                      description: 更新日時
+    students:
+      type: array
+      description: 生徒一覧
+      items:
+        type: object
+        properties:
+          id:
+            type: string
+            description: 生徒ID
+          lastName:
+            type: string
+            description: 姓
+          firstName:
+            type: string
+            description: 名
+          lastNameKana:
+            type: string
+            description: 姓(かな)
+          firstNameKana:
+            type: string
+            description: 名(かな)
+          mail:
+            type: string
+            description: メールアドレス
+          schoolType:
+            type: integer
+            format: int32
+            description: 校種(0:不明, 1:小学校, 2:中学校, 3:高等学校)
+          createdAt:
+            type: string
+            description: 登録日時
+          updatedAt:
+            type: string
+            description: 更新日時
   example:
     lessons:
     - id: 1
@@ -115,4 +264,51 @@ lessonsResponse:
       notes: '授業メモです。'
       createdAt: '2021-12-12T12:12:30.100Z'
       updatedAt: '2021-12-12T12:12:30.100Z'
-    total: 1
+    teachers:
+    - id: 'kSByoE6FetnPs5Byk3a9Zx'
+      lastName: '中村'
+      firstName: '広大'
+      lastNameKana: 'なかむら'
+      firstNamaKana: 'こうだい'
+      mail: 'teacher-test01@calmato.jp'
+      role: 1
+      createdAt: '2021-12-12T12:12:30.100Z'
+      updatedAt: '2021-12-12T12:12:30.100Z'
+      subjects:
+        1: []
+        2: []
+        3: []
+    - id: 'kSByoE6FetnPs5Byk3a9Zx'
+      lastName: '山田'
+      firstName: 'タダシ'
+      lastNameKana: 'やまだ'
+      firstNamaKana: 'ただし'
+      mail: 'teacher-test02@calmato.jp'
+      role: 2
+      createdAt: '2021-12-12T12:12:30.100Z'
+      updatedAt: '2021-12-12T12:12:30.100Z'
+      subjects:
+        1: []
+        2: []
+        3: []
+    students:
+    - id: 'kSByoE6FetnPs5Byk3a9Zx'
+      lastName: '中村'
+      firstName: '広大'
+      lastNameKana: 'なかむら'
+      firstNamaKana: 'こうだい'
+      mail: 'student-test01@calmato.jp'
+      schoolType: 1
+      grade: 1
+      createdAt: '2021-12-12T12:12:30.100Z'
+      updatedAt: '2021-12-12T12:12:30.100Z'
+    - id: 'kSByoE6FetnPs5Byk3a9Zx'
+      lastName: '山田'
+      firstName: 'タダシ'
+      lastNameKana: 'やまだ'
+      firstNamaKana: 'ただし'
+      mail: 'student-test02@calmato.jp'
+      schoolType: 3
+      grade: 2
+      createdAt: '2021-12-12T12:12:30.100Z'
+      updatedAt: '2021-12-12T12:12:30.100Z'
